
AUX_SOURCE_DIRECTORY(. DIR_UTILS)
AUX_SOURCE_DIRECTORY(aes/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(clib/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(common/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(config/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(config/ini/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(config/xml/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(frame/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(json/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(log/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(net/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(redis/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(string/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(time/ DIR_UTILS) 
AUX_SOURCE_DIRECTORY(url/ DIR_UTILS) 

INCLUDE_DIRECTORIES(/usr/include/libxml2)
INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(/usr/include/)

LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(/usr/lib64)
LINK_DIRECTORIES(/usr/local/lib64)


ADD_LIBRARY(utils STATIC ${DIR_UTILS})
TARGET_LINK_LIBRARIES(utils xml2 json)
